--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+1.3.0
+-----
+- Storage display: A domain filter now persists clicking a "Remove" button
+- Popup contents and the storage display page are now updated dynamically
+- Clicking on the "Store this new certificate" button in the popup now has
+  better feedback
+- Internal refactoring for increased maintainability in the future
+
 1.2.0
 -----
 - Rebranding as "Certificate Watch" with new icons
