--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.5.0
+-----
+- Added ability to translate the add-on
+- Added German translation
+
 1.4.0
 -----
 - Added option in the pop-up to (temporarily) disable the add-on
