Make "tabs" an optional dependency
When it is first selected in preferences, the user is requested
to grant that permission.
Also describe permissions in README

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -67,6 +67,14 @@
 		"message": "Ignorierte Domains:",
 		"description": "Label for the textbox to insert domains to ignore."
 	},
+	"settingsSave": {
+		"message": "Speichern",
+		"description": "Button to save the modified settings."
+	},
+	"settingsReset": {
+		"message": "Zurücksetzen",
+		"description": "Button to reset the modified settings."
+	},
 	"popupTitle": {
 		"message": "Certificate Watch Popup",
 		"description": "Title for the pop-up page (usually not visible)."
