--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -67,6 +67,14 @@
 		"message": "Domains to ignore:",
 		"description": "Label for the textbox to insert domains to ignore."
 	},
+	"settingsSave": {
+		"message": "Save",
+		"description": "Button to save the modified settings."
+	},
+	"settingsReset": {
+		"message": "Reset",
+		"description": "Button to reset the modified settings."
+	},
 	"popupTitle": {
 		"message": "Certificate Watch Popup",
 		"description": "Title for the pop-up page (usually not visible)."
