Use consistent custom styling
Now all input elements are styled beautifully.
The storage table also looks nicer now.

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -206,7 +206,7 @@
 		"description": "The table header for the domains."
 	},
 	"storageFieldDomainFilter": {
-		"message": "Filter:",
+		"message": "Filter",
 		"description": "Description for the filter by domain name."
 	},
 	"storageFieldCert": {
