--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -67,6 +67,10 @@
 		"message": "Domains to ignore:",
 		"description": "Label for the textbox to insert domains to ignore."
 	},
+	"settingsIgnoredDomainsTooltip": {
+		"message": "Enter one ignored domain per line\nUse * as a match-all wildcard for a domain part\nExample: *.example.com",
+		"description": "Tooltip explaining the ignore domain textarea"
+	},
 	"settingsSave": {
 		"message": "Save",
 		"description": "Button to save the modified settings."
