--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -240,5 +240,37 @@
 	"storageFieldCertValidityEnd": {
 		"message": "Valid Until",
 		"description": "The table header for the certificate validity (end)."
+	},
+	"storageFieldCertLastSeen": {
+		"message": "Last Seen",
+		"description": "The table header for the time when the certifcate was last encountered by this add-on."
+	},
+	"storageCertUnknown": {
+		"message": "unknown",
+		"description": "Used when displaying a certifcate and a value is not known (e.g. not stored)."
+	},
+	"timeDiffToday": {
+		"message": "today",
+		"description": "Describes that something happens or happened today."
+	},
+	"timeDiffBeforeToday": {
+		"message": "$DAYS$ days ago",
+		"description": "Describes that something happened a given number of days before today.",
+		"placeholders": {
+			"days": {
+				"content": "$1",
+				"example": "5"
+			}
+		}
+	},
+	"timeDiffAfterToday": {
+		"message": "in $DAYS$ days",
+		"description": "Describes that something will happen a given number of days after today.",
+		"placeholders": {
+			"days": {
+				"content": "$1",
+				"example": "5"
+			}
+		}
 	}
 }
