--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -147,6 +147,34 @@
 		"message": "Seriennummer",
 		"description": "The serial number of the certificate."
 	},
+	"popupChangedFieldValidityStart": {
+		"message": "Von: $DATE$ ($DIFF$)",
+		"description": "The starting time (Not Before field) of a certifcate shown in the comparison pop-up.",
+		"placeholders": {
+			"date": {
+				"content": "$1",
+				"example": "2019-08-20 12:34:12"
+			},
+			"diff": {
+				"content": "$2",
+				"example": "vor 5 Tagen"
+			}
+		}
+	},
+	"popupChangedFieldValidityEnd": {
+		"message": "Bis: $DATE$ ($DIFF$)",
+		"description": "The ending time (Not After field) of a certifcate shown in the comparison pop-up.",
+		"placeholders": {
+			"date": {
+				"content": "$1",
+				"example": "2019-08-20 12:34:12"
+			},
+			"diff": {
+				"content": "$2",
+				"example": "in 5 Tagen"
+			}
+		}
+	},
 	"popupChangedStored": {
 		"message": "Gespeichert:",
 		"description": "Label in front of the stored version of a changed field."
